--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </br>基本的な事は、問題無く出来ます。</br>
                 </br>また、jQueryを使って、ナビゲーションメニューとハンバーガーアイコンを作る事が出来ます。</p>
                 </div>
-                    <div class="sikil2"><img src="img/hoto.png"></div>
+                    <div class="sikil2"><img src="img/hoto10.png"></div>
             </div>
            
             <div class="sikil">
