--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="conteiner">
             <div class="header">
-                <a href="https://twitter.com/supreme_ryuji"><img src="web/img/hoto9.png"></a>
+                <a href="https://twitter.com/supreme_ryuji"><img src="img/hoto9.png"></a>
                 <a href="https://twitter.com/supreme_ryuji"><i class="fab fa-twitter-square fa-3x"></i></a>
             </div>
                 <!-- ナビ -->
