--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
         </div>
     </footer>
 
-    
+    <script>
+      $(function(){
+           $('.toggle').click(function() {
+               $(this).toggleClass('active');
+   
+               if ($(this).hasClass('active')) {
+                   $ ('.gnav').addClass('active');
+               } else {
+                   $('.gnav').removeClass('active');
+               }
+       
+           });
+       }); 
+   
+    </script>
 </body>
 </html>
